# mangabot

./: .gitignore  CMakeLists.txt  bot.cpp  bot.hpp  main.cpp
bot_api/: CMakeLists.txt
bot_api/include/: bot_api.hpp
bot_api/src/: bot_api.cpp
database/: CMakeLists.txt
database/include/: database.hpp
database/src/: database.cpp
logger/: CMakeLists.txt
logger/include/: logger.hpp
logger/src/: logger.cpp
telegraph_api/: CMakeLists.txt
telegraph_api/include/: telegraph.hpp
telegraph_api/src/: telegraph.cpp
